Display whitespace characters in text note correctly

--- a/src/components/content-types/TextContent.css
+++ b/src/components/content-types/TextContent.css
@@ -20,6 +20,7 @@
   width: 100%;
   height: 100%;
   font-size: 1rem;
+  white-space: pre;
   line-height: 1.5rem;
 }
 
